# speckit-for-projects

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.specify/project/: coding-rules.md  design-system.md  domain-map.md  tech-stack.md
briefs/: 001-project-domain-map-support.md
designs/common_design/api/: CD-API-001-domain-map-context.md
designs/common_design/data/: CD-DATA-001-domain-relationship.md
designs/common_design/module/: CD-MOD-001-domain-map-context-service.md
docs/: add-sdd-debug-reflect-plan.md  basic-design.md  implementation-plan.md  implementation-task-plan.md  p1-analyze-implementation-plan.md  p2-clarify-implementation-plan.md  skill-expansion-plan.md  upstream-spec-kit-map.md
examples/: README.md
examples/api-centric/: README.md
examples/batch-centric/: README.md
examples/screen-centric/: README.md
guides/: artifact-reference.ja.md  cli-reference.ja.md  manual.ja.md  troubleshooting.ja.md  tutorial.ja.md  workflow-reference.ja.md
src/speckit_for_projects/: __init__.py  cli.py
tests/: conftest.py
tests/e2e/: test_cli_workflow_e2e.py  test_sample_agent_workflow_e2e.py  test_storybook_build_e2e.py
tests/golden/: test_example_outputs.py  test_scaffold_golden.py
tests/integration/: test_cli_analyze.py  test_cli_check.py  test_cli_init.py
tests/unit/: test_agent_config.py  test_agent_runtime.py  test_agent_skill_installer.py  test_consistency_checker.py  test_context_assembler.py  test_ids.py  test_models.py  test_task_ledger.py  test_upstream_map.py  test_yaml_loader.py
(+145 files in other folders)
