[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speckit-for-projects"
version = "0.1.0"
description = "SpecKit for Projects: CLI scaffolding for design-driven development in SI projects"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "SpecKit for Projects contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "jinja2>=3.1.4,<4",
  "pydantic>=2.11,<3",
  "rich>=13.9,<14",
  "ruamel.yaml>=0.18.10,<0.19",
  "typer>=0.16,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "ruff>=0.11,<0.12",
]

[project.scripts]
sdd = "speckit_for_projects.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
speckit_for_projects = ["templates/**/*", "templates/**/.*", "templates/**/.storybook/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict = true
packages = ["speckit_for_projects"]
